--- a/style.css
+++ b/style.css
@@ -124,6 +124,17 @@ button {
     display: none;
 }
 
+footer {
+    background-color: var(--primary-color);
+    color: white;
+    padding: 2.85rem;
+    text-align: center;
+    border-top-right-radius: 1rem;
+    box-shadow: rgb(229, 231, 235) 0px 1px 25px;
+    margin: 6rem auto 0rem;
+
+}
+
 
 
 
